<resources>
    <string name="app_name">圈圈</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="find">Find</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="setting">Setting</string>

    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>

    <string name="user_icon">User Icon</string>
    <string name="nick_name">Nickname</string>
    <string name="ap_name">Ap Name</string>
    <string name="ap_pwd">Ap Password</string>
    <string name="store_path">Store Path</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="check_version">Check New Version</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="file_unit">files</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="title_activity_share_images">Images</string>
    <string name="title_activity_edit_setting_item">EditSettingItemActivity</string>
    <string name="title_activity_user_feedback">Feedback</string>
    <string name="title_activity_about">About</string>
    <string name="find_wifi_title">Click to join</string>
    <string name="find_devices_title">Click to see shared files</string>

    <string name="image">Images</string>
    <string name="title_activity_scan_shared">ScanSharedActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_wifi"><u>Set WiFi</u></string>
</resources>
