<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@mipmap/huhu">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/user_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#FF000000"
            app:civ_border_width="0dp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/user_icon"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="huhu's phone"
            android:textColor="#E9E9E9"
            android:textSize="16sp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="6dp"
        android:id="@+id/wifi_layout"
        style="@style/main_fragment_item_layout"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/wifi_label"
            style="@style/setting_icon_style"
            android:src="@mipmap/wifi" />

        <TextView
            style="@style/setting_label_style"
            android:layout_toRightOf="@id/wifi_label"
            android:text="可用WiFi" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/download_layout"
        style="@style/main_fragment_item_layout"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/download_label"
            style="@style/setting_icon_style"
            android:src="@mipmap/download" />

        <TextView
            style="@style/setting_label_style"
            android:layout_toRightOf="@id/download_label"
            android:text="下载管理" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/storagepath_layout"
        style="@style/main_fragment_item_layout">

        <ImageView
            android:id="@+id/storage_path_label"
            style="@style/setting_icon_style"
            android:src="@mipmap/storage" />

        <TextView
            android:id="@+id/textView2"
            style="@style/setting_label_style"
            android:layout_toRightOf="@id/storage_path_label"
            android:text="@string/store_path" />
    </LinearLayout>

    <View style="@style/setting_divider_style_1" />

    <LinearLayout
        android:layout_marginTop="6dp"
        android:id="@+id/checkversion_layout"
        style="@style/main_fragment_item_layout">

        <ImageView
            android:id="@+id/check_version_label"
            style="@style/setting_icon_style"
            android:src="@mipmap/update" />

        <TextView
            style="@style/setting_label_style"
            android:layout_toRightOf="@id/check_version_label"
            android:text="@string/check_version" />

        <TextView
            android:id="@+id/app_version"
            style="@style/setting_content_style" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/feedback_layout"
        style="@style/main_fragment_item_layout">

        <ImageView
            android:id="@+id/feedback_label"
            style="@style/setting_icon_style"
            android:src="@mipmap/feedback" />

        <TextView
            style="@style/setting_label_style"
            android:layout_toRightOf="@id/feedback_label"
            android:text="@string/feedback" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/about_layout"
        style="@style/main_fragment_item_layout">

        <ImageView
            android:id="@+id/about_label"
            style="@style/setting_icon_style"
            android:src="@mipmap/desc" />

        <TextView
            style="@style/setting_label_style"
            android:layout_toRightOf="@id/about_label"
            android:text="@string/about" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quit_layout"
        style="@style/main_fragment_item_layout">

        <ImageView
            android:id="@+id/quit"
            style="@style/setting_icon_style"
            android:src="@mipmap/quit" />

        <TextView
            style="@style/setting_label_style"
            android:layout_toRightOf="@id/quit"
            android:src="@mipmap/arrow_right"
            android:text="退出" />
    </LinearLayout>


</LinearLayout>